aula9/sexp_yacc/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Comando
Rule 1     Comando -> ( READ id )
Rule 2     Comando -> ( PRINT Exp )
Rule 3     Comando -> ( SET id Exp )
Rule 4     Comando -> ( DUMP )
Rule 5     Exp -> ( ADD Exp Termo )
Rule 6     Exp -> ( SUB Exp Termo )
Rule 7     Exp -> Termo
Rule 8     Exp -> ( MUL Termo Fator )
Rule 9     Termo -> ( DIV Termo Fator )
Rule 10    Termo -> Fator
Rule 11    Fator -> ( Exp )
Rule 12    Fator -> num
Rule 13    Fator -> id

Terminals, with rules where they appear

(                    : 1 2 3 4 5 6 8 9 11
)                    : 1 2 3 4 5 6 8 9 11
ADD                  : 5
DIV                  : 9
DUMP                 : 4
MUL                  : 8
PRINT                : 2
READ                 : 1
SET                  : 3
SUB                  : 6
error                : 
id                   : 1 3 13
num                  : 12

Nonterminals, with rules where they appear

Comando              : 0
Exp                  : 2 3 5 6 11
Fator                : 8 9 10
Termo                : 5 6 7 8 9

Parsing method: LALR

state 0

    (0) S' -> . Comando
    (1) Comando -> . ( READ id )
    (2) Comando -> . ( PRINT Exp )
    (3) Comando -> . ( SET id Exp )
    (4) Comando -> . ( DUMP )

    (               shift and go to state 2

    Comando                        shift and go to state 1

state 1

    (0) S' -> Comando .



state 2

    (1) Comando -> ( . READ id )
    (2) Comando -> ( . PRINT Exp )
    (3) Comando -> ( . SET id Exp )
    (4) Comando -> ( . DUMP )

    READ            shift and go to state 3
    PRINT           shift and go to state 4
    SET             shift and go to state 5
    DUMP            shift and go to state 6


state 3

    (1) Comando -> ( READ . id )

    id              shift and go to state 7


state 4

    (2) Comando -> ( PRINT . Exp )
    (5) Exp -> . ( ADD Exp Termo )
    (6) Exp -> . ( SUB Exp Termo )
    (7) Exp -> . Termo
    (8) Exp -> . ( MUL Termo Fator )
    (9) Termo -> . ( DIV Termo Fator )
    (10) Termo -> . Fator
    (11) Fator -> . ( Exp )
    (12) Fator -> . num
    (13) Fator -> . id

    (               shift and go to state 8
    num             shift and go to state 12
    id              shift and go to state 13

    Exp                            shift and go to state 9
    Termo                          shift and go to state 10
    Fator                          shift and go to state 11

state 5

    (3) Comando -> ( SET . id Exp )

    id              shift and go to state 14


state 6

    (4) Comando -> ( DUMP . )

    )               shift and go to state 15


state 7

    (1) Comando -> ( READ id . )

    )               shift and go to state 16


state 8

    (5) Exp -> ( . ADD Exp Termo )
    (6) Exp -> ( . SUB Exp Termo )
    (8) Exp -> ( . MUL Termo Fator )
    (9) Termo -> ( . DIV Termo Fator )
    (11) Fator -> ( . Exp )
    (5) Exp -> . ( ADD Exp Termo )
    (6) Exp -> . ( SUB Exp Termo )
    (7) Exp -> . Termo
    (8) Exp -> . ( MUL Termo Fator )
    (9) Termo -> . ( DIV Termo Fator )
    (10) Termo -> . Fator
    (11) Fator -> . ( Exp )
    (12) Fator -> . num
    (13) Fator -> . id

    ADD             shift and go to state 17
    SUB             shift and go to state 19
    MUL             shift and go to state 20
    DIV             shift and go to state 21
    (               shift and go to state 8
    num             shift and go to state 12
    id              shift and go to state 13

    Exp                            shift and go to state 18
    Termo                          shift and go to state 10
    Fator                          shift and go to state 11

state 9

    (2) Comando -> ( PRINT Exp . )

    )               shift and go to state 22


state 10

    (7) Exp -> Termo .

    )               reduce using rule 7 (Exp -> Termo .)
    (               reduce using rule 7 (Exp -> Termo .)
    num             reduce using rule 7 (Exp -> Termo .)
    id              reduce using rule 7 (Exp -> Termo .)


state 11

    (10) Termo -> Fator .

    )               reduce using rule 10 (Termo -> Fator .)
    (               reduce using rule 10 (Termo -> Fator .)
    num             reduce using rule 10 (Termo -> Fator .)
    id              reduce using rule 10 (Termo -> Fator .)


state 12

    (12) Fator -> num .

    )               reduce using rule 12 (Fator -> num .)
    (               reduce using rule 12 (Fator -> num .)
    num             reduce using rule 12 (Fator -> num .)
    id              reduce using rule 12 (Fator -> num .)


state 13

    (13) Fator -> id .

    )               reduce using rule 13 (Fator -> id .)
    (               reduce using rule 13 (Fator -> id .)
    num             reduce using rule 13 (Fator -> id .)
    id              reduce using rule 13 (Fator -> id .)


state 14

    (3) Comando -> ( SET id . Exp )
    (5) Exp -> . ( ADD Exp Termo )
    (6) Exp -> . ( SUB Exp Termo )
    (7) Exp -> . Termo
    (8) Exp -> . ( MUL Termo Fator )
    (9) Termo -> . ( DIV Termo Fator )
    (10) Termo -> . Fator
    (11) Fator -> . ( Exp )
    (12) Fator -> . num
    (13) Fator -> . id

    (               shift and go to state 8
    num             shift and go to state 12
    id              shift and go to state 13

    Exp                            shift and go to state 23
    Termo                          shift and go to state 10
    Fator                          shift and go to state 11

state 15

    (4) Comando -> ( DUMP ) .

    $end            reduce using rule 4 (Comando -> ( DUMP ) .)


state 16

    (1) Comando -> ( READ id ) .

    $end            reduce using rule 1 (Comando -> ( READ id ) .)


state 17

    (5) Exp -> ( ADD . Exp Termo )
    (5) Exp -> . ( ADD Exp Termo )
    (6) Exp -> . ( SUB Exp Termo )
    (7) Exp -> . Termo
    (8) Exp -> . ( MUL Termo Fator )
    (9) Termo -> . ( DIV Termo Fator )
    (10) Termo -> . Fator
    (11) Fator -> . ( Exp )
    (12) Fator -> . num
    (13) Fator -> . id

    (               shift and go to state 8
    num             shift and go to state 12
    id              shift and go to state 13

    Exp                            shift and go to state 24
    Termo                          shift and go to state 10
    Fator                          shift and go to state 11

state 18

    (11) Fator -> ( Exp . )

    )               shift and go to state 25


state 19

    (6) Exp -> ( SUB . Exp Termo )
    (5) Exp -> . ( ADD Exp Termo )
    (6) Exp -> . ( SUB Exp Termo )
    (7) Exp -> . Termo
    (8) Exp -> . ( MUL Termo Fator )
    (9) Termo -> . ( DIV Termo Fator )
    (10) Termo -> . Fator
    (11) Fator -> . ( Exp )
    (12) Fator -> . num
    (13) Fator -> . id

    (               shift and go to state 8
    num             shift and go to state 12
    id              shift and go to state 13

    Exp                            shift and go to state 26
    Termo                          shift and go to state 10
    Fator                          shift and go to state 11

state 20

    (8) Exp -> ( MUL . Termo Fator )
    (9) Termo -> . ( DIV Termo Fator )
    (10) Termo -> . Fator
    (11) Fator -> . ( Exp )
    (12) Fator -> . num
    (13) Fator -> . id

    (               shift and go to state 27
    num             shift and go to state 12
    id              shift and go to state 13

    Termo                          shift and go to state 28
    Fator                          shift and go to state 11

state 21

    (9) Termo -> ( DIV . Termo Fator )
    (9) Termo -> . ( DIV Termo Fator )
    (10) Termo -> . Fator
    (11) Fator -> . ( Exp )
    (12) Fator -> . num
    (13) Fator -> . id

    (               shift and go to state 27
    num             shift and go to state 12
    id              shift and go to state 13

    Termo                          shift and go to state 29
    Fator                          shift and go to state 11

state 22

    (2) Comando -> ( PRINT Exp ) .

    $end            reduce using rule 2 (Comando -> ( PRINT Exp ) .)


state 23

    (3) Comando -> ( SET id Exp . )

    )               shift and go to state 30


state 24

    (5) Exp -> ( ADD Exp . Termo )
    (9) Termo -> . ( DIV Termo Fator )
    (10) Termo -> . Fator
    (11) Fator -> . ( Exp )
    (12) Fator -> . num
    (13) Fator -> . id

    (               shift and go to state 27
    num             shift and go to state 12
    id              shift and go to state 13

    Termo                          shift and go to state 31
    Fator                          shift and go to state 11

state 25

    (11) Fator -> ( Exp ) .

    )               reduce using rule 11 (Fator -> ( Exp ) .)
    (               reduce using rule 11 (Fator -> ( Exp ) .)
    num             reduce using rule 11 (Fator -> ( Exp ) .)
    id              reduce using rule 11 (Fator -> ( Exp ) .)


state 26

    (6) Exp -> ( SUB Exp . Termo )
    (9) Termo -> . ( DIV Termo Fator )
    (10) Termo -> . Fator
    (11) Fator -> . ( Exp )
    (12) Fator -> . num
    (13) Fator -> . id

    (               shift and go to state 27
    num             shift and go to state 12
    id              shift and go to state 13

    Termo                          shift and go to state 32
    Fator                          shift and go to state 11

state 27

    (9) Termo -> ( . DIV Termo Fator )
    (11) Fator -> ( . Exp )
    (5) Exp -> . ( ADD Exp Termo )
    (6) Exp -> . ( SUB Exp Termo )
    (7) Exp -> . Termo
    (8) Exp -> . ( MUL Termo Fator )
    (9) Termo -> . ( DIV Termo Fator )
    (10) Termo -> . Fator
    (11) Fator -> . ( Exp )
    (12) Fator -> . num
    (13) Fator -> . id

    DIV             shift and go to state 21
    (               shift and go to state 8
    num             shift and go to state 12
    id              shift and go to state 13

    Termo                          shift and go to state 10
    Fator                          shift and go to state 11
    Exp                            shift and go to state 18

state 28

    (8) Exp -> ( MUL Termo . Fator )
    (11) Fator -> . ( Exp )
    (12) Fator -> . num
    (13) Fator -> . id

    (               shift and go to state 33
    num             shift and go to state 12
    id              shift and go to state 13

    Fator                          shift and go to state 34

state 29

    (9) Termo -> ( DIV Termo . Fator )
    (11) Fator -> . ( Exp )
    (12) Fator -> . num
    (13) Fator -> . id

    (               shift and go to state 33
    num             shift and go to state 12
    id              shift and go to state 13

    Fator                          shift and go to state 35

state 30

    (3) Comando -> ( SET id Exp ) .

    $end            reduce using rule 3 (Comando -> ( SET id Exp ) .)


state 31

    (5) Exp -> ( ADD Exp Termo . )

    )               shift and go to state 36


state 32

    (6) Exp -> ( SUB Exp Termo . )

    )               shift and go to state 37


state 33

    (11) Fator -> ( . Exp )
    (5) Exp -> . ( ADD Exp Termo )
    (6) Exp -> . ( SUB Exp Termo )
    (7) Exp -> . Termo
    (8) Exp -> . ( MUL Termo Fator )
    (9) Termo -> . ( DIV Termo Fator )
    (10) Termo -> . Fator
    (11) Fator -> . ( Exp )
    (12) Fator -> . num
    (13) Fator -> . id

    (               shift and go to state 8
    num             shift and go to state 12
    id              shift and go to state 13

    Exp                            shift and go to state 18
    Termo                          shift and go to state 10
    Fator                          shift and go to state 11

state 34

    (8) Exp -> ( MUL Termo Fator . )

    )               shift and go to state 38


state 35

    (9) Termo -> ( DIV Termo Fator . )

    )               shift and go to state 39


state 36

    (5) Exp -> ( ADD Exp Termo ) .

    )               reduce using rule 5 (Exp -> ( ADD Exp Termo ) .)
    (               reduce using rule 5 (Exp -> ( ADD Exp Termo ) .)
    num             reduce using rule 5 (Exp -> ( ADD Exp Termo ) .)
    id              reduce using rule 5 (Exp -> ( ADD Exp Termo ) .)


state 37

    (6) Exp -> ( SUB Exp Termo ) .

    )               reduce using rule 6 (Exp -> ( SUB Exp Termo ) .)
    (               reduce using rule 6 (Exp -> ( SUB Exp Termo ) .)
    num             reduce using rule 6 (Exp -> ( SUB Exp Termo ) .)
    id              reduce using rule 6 (Exp -> ( SUB Exp Termo ) .)


state 38

    (8) Exp -> ( MUL Termo Fator ) .

    )               reduce using rule 8 (Exp -> ( MUL Termo Fator ) .)
    (               reduce using rule 8 (Exp -> ( MUL Termo Fator ) .)
    num             reduce using rule 8 (Exp -> ( MUL Termo Fator ) .)
    id              reduce using rule 8 (Exp -> ( MUL Termo Fator ) .)


state 39

    (9) Termo -> ( DIV Termo Fator ) .

    )               reduce using rule 9 (Termo -> ( DIV Termo Fator ) .)
    (               reduce using rule 9 (Termo -> ( DIV Termo Fator ) .)
    num             reduce using rule 9 (Termo -> ( DIV Termo Fator ) .)
    id              reduce using rule 9 (Termo -> ( DIV Termo Fator ) .)

